# Avy-Dawgs-receiver-software

./: README.md
adc-stream-test/: Cargo.toml
adc-stream-test/src/: main.rs
opamp-adc-test/: Cargo.toml
opamp-adc-test/src/: adc_dma.rs  amplifier.rs  main.rs
uart-test/src/: main.rs
